statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mendix
spec:
  serviceName: mendix
  replicas: 3
  selector:
    matchLabels:
      app: mendix
  template:
    metadata:
      labels:
        app: mendix
    spec:
      containers:
      - name: mendix
        image: marceloweb/demo-app-mendix:v3.4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/build/data/files"
          name: mendix-data
      volumes:
        - hostPath:
            path: "/home/docker/mendix-files"
          name: mendix-data
