service-mendix.yml
apiVersion: v1
kind: Service
metadata:
   name: mendix
spec:
   type: LoadBalancer
   ports:
      - port: 8080
        nodePort: 30007
        targetPort: 8080
   selector:
      name: mendix
